kubernetes/networking/nas.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nas
  namespace: networking
  labels:
    kubernetes.io/service-name: nas
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.178.254
ports:
  - name: web-ui
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: networking
spec:
  ports:
    - name: web-ui
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nas
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: nas
          port: 80
  tls:
    secretName: nas-internal-certificate
