kubernetes/networking/router.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ziggo-router
  namespace: networking
  labels:
    kubernetes.io/service-name: ziggo-router # Required to link the Service
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.178.1 # Internal static IP of router
ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ziggo-router
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ziggo-router
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`router.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: ziggo-router
          port: http
  tls:
    secretName: ziggo-router-internal-certificate
